fix. header-content: overflow

--- a/app/scss/header/_header.scss
+++ b/app/scss/header/_header.scss
@@ -17,9 +17,9 @@
 	&-content {
 		
 		height: 110vh;
-
 		display: flex;
 		flex-direction: column;
+		overflow: hidden;
 
 	}
 
